--- a/main.tex
+++ b/main.tex
@@ -41,7 +41,7 @@
 \fancyhf{} % clear all header and footer fields
 \fancyfoot{}
 \fancyheadoffset[R]{0pt}
-\fancyhead[R]{August 11, 2021}
+\fancyhead[R]{December 1, 2021}
 
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}
@@ -154,8 +154,8 @@
 \begin{center}
     {\Huge \scshape Ishan Bhatt} \\ \vspace{1pt}
     \small \raisebox{-0.1\height}\faPhone\ 984-233-8019 ~ \raisebox{-0.2\height}\faEnvelope\  \href{mailto:ivbhatt@outlook.com}{  \underline{ivbhatt@outlook.com}} ~ 
-    \raisebox{-0.2\height}\faLinkedin\ \href{https://www.linkedin.com/in/ivbhatt
-}{\underline{www.linkedin.com/in/ivbhatt}}  ~
+    \raisebox{-0.2\height}\faLinkedin\ \href{https://www.linkedin.com/in/ivbhatt}{
+    \underline{www.linkedin.com/in/ivbhatt}}  ~
     \raisebox{-0.2\height}\faGithub\ 
     \href{https://github.com/ivbhatt}{ \underline{github.com/ivbhatt}} 
     ~
@@ -170,7 +170,7 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {\href{https://www.csc.ncsu.edu/}{Department of Computer Science, North Carolina State University}}{January 2021 -- December 2022}
-      {Master of Computer Science}{Raleigh, North Carolina, United States}
+      {Master of Science (Computer Science)}{Raleigh, North Carolina, United States}
 \vspace{-2pt}  
 \resumeItemSilentListStart    \resumeSilentItem{\textbf{Grade Point Average \textit{(current)}: 4.33} on a 4-point scale}
 \resumeItemSilentListEnd
@@ -180,7 +180,8 @@
       {Bachelor of Technology (Computer Engineering)}{Vallabh Vidyanagar, Gujarat, India}
  \vspace{-1pt}  
  \resumeItemSilentListStart
- \resumeSilentItem{\textbf{Cumulative Performance Index: 9.29} on a 10-point scale; \textbf{\href{http://gate.iitd.ac.in/}{GATE (Computer Science)}: All India Rank -- 1357} out of 99932 candidates}
+ \resumeSilentItem{\textbf{Cumulative Performance Index: 9.29} on a 10-point scale \newline
+ \textbf{\href{http://gate.iitd.ac.in/}{GATE (Computer Science)}: All India Rank -- 1357} out of 99932 candidates}
  \resumeItemSilentListEnd
   
     \resumeSubHeadingListEnd
@@ -191,19 +192,20 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {\href{https://research.csc.ncsu.edu/picture/}{PICTure Research Group, North Carolina State University}}{June 2021 -- Present}
+      {\href{https://research.csc.ncsu.edu/picture/}{PICTure Research Group, North Carolina State University}}{June 2021 -- December 2022}
       {Graduate Research Assistant}{Raleigh, North Carolina, United States}
       \resumeItemListStart
-        \resumeItem{Using ML to test causal hypotheses around \href{https://en.wikipedia.org/wiki/Tropical_cyclogenesis}{Tropical Cyclogenesis} with the goal of achieving reliable \textbf{Pre-season Hurricane Prediction}}
+        \resumeItem{\textbf{Using ML} and hypotheses around \href{https://en.wikipedia.org/wiki/Tropical_cyclogenesis}{Tropical Cyclogenesis} \textbf{to achieve reliable Pre-season Hurricane Prediction}} 
+        \resumeItem{\textbf{Building a web platform for visualizing} data and ML model performance related to \textbf{Net-load forecasting of Solar Power}}
       \resumeItemListEnd
     %   \vspace{-10pt}
     \resumeSubheading
-      {\href{https://www.tcs.com/}{Tata Consultancy Services Limited - Research \& Innovation (Manufacturing)}}{January 2019 -- July 2020}
+      {\href{https://www.tcs.com/}{Tata Consultancy Services Limited - Research \& Innovation (Manufacturing)}}{January 2019 -- August 2020}
       {Project Intern \& (later) Systems Engineer - AI/ML}{Mumbai, Maharashtra, India}
       \resumeItemListStart
-        \resumeItem{Built ML-powered Fault Detection Systems for Car Seats, Jet Engines (Vibration Detection using sound), Metal Welds (Visual Weld Strength Analysis), PCBs (Detect missing components from images), etc.; Integrated these with TCS's \textit{Visual Cognitive Quality Assurance} suite}
+        \resumeItem{\textbf{Built ML-powered Fault Detection Systems for} Car Seats, Jet Engines (Vibration Detection using sound), Metal Welds (Visual Weld Strength Analysis), PCBs (Detect missing components from images), etc.; Integrated these with TCS's \textbf{\textit{Visual Cognitive Quality Assurance} suite}}
         
-        \resumeResultItem{Was usually responsible for proposing a new idea and deploying a PoC/Pilot application; Completed over ten projects in a year}
+        \resumeResultItem{Was usually responsible for proposing a new idea and deploying a PoC/Pilot application; \textbf{Completed over ten assignments in a year}}
       \resumeItemListEnd
 
     
@@ -229,7 +231,7 @@
 %     %\resumeSubHeadingListEnd
 
 %-----------PROGRAMMING SKILLS-----------
-\section{Technical Skills}
+\section{Technical Skills \null \hfill {\normalfont \textit{* indicates working-knowledge}} }
 
 \begin{multicols}{2}
  \begin{itemize}[leftmargin=0.15in, label={}]
@@ -237,18 +239,18 @@
         \textbf{Programming}{: Python 3, C++/C, JavaScript, Java* \\
         \textbf{Machine Learning}{: NumPy, pandas, scikit-learn, OpenCV, NLTK} \\
         \textbf{Deep Learning}{: TensorFlow(1.x) + Keras, PyTorch*} \\
-        \textbf{Visualization}{: matplotlib, tableau, d3.js, Seaborn} \\
+        \textbf{Visualization}{: matplotlib, Seaborn, D3JS, tableau, dash.plotly} \\
         
         
-        \textbf{Web front-end}{: HTML 5, CSS 3, Bootstrap, JavaScript, React*} \\
-        \textbf{Web back-end}{: Python Flask, node.js, PHP, SQL} \\
+        \textbf{Web front-end}{: HTML 5, CSS 3, Bootstrap, JavaScript, ReactJS*} \\
+        \textbf{Web back-end}{: Python Flask, NodeJS, PHP, SQL} \\
         \textbf{Internet of Things}{: Arduino, Raspberry Pi} \\
         \textbf{Cloud/DevOps*}{: git, AWS, GCP, Docker} \\
     }}}
  \end{itemize}
 \end{multicols}
-\vspace{-5pt}
-\center{* \textit{indicates working-knowledge}}
+% \vspace{-5pt}
+% \center{* \textit{indicates working-knowledge}}
 \vspace{-10pt}
 %-----------PROJECTS-----------
 \section{Projects}
@@ -261,27 +263,27 @@
           \vspace{-20pt}
           \resumeItemListStart
             
-            \resumeItem{Built an Ensemble of \href{https://blog.keras.io/building-autoencoders-in-keras.html}{1D-Autoencoders} and \href{https://en.wikipedia.org/wiki/Bidirectional_recurrent_neural_networks}{Bi-LSTMs} to perform \href{https://blog.keras.io/a-ten-minute-introduction-to-sequence-to-sequence-learning-in-keras.html}{Sequence-to-Sequence Classification} for continuous terrain prediction using data stream from sensors (accelerometers and gyroscopes) attached to a person's prosthetic lower limb}
+            \resumeItem{Built an Ensemble of \href{https://blog.keras.io/building-autoencoders-in-keras.html}{1D-Auto-encoders} and \href{https://en.wikipedia.org/wiki/Bidirectional_recurrent_neural_networks}{Bi-LSTMs} to perform \href{https://blog.keras.io/a-ten-minute-introduction-to-sequence-to-sequence-learning-in-keras.html}{Sequence-to-Sequence Classification} for \textbf{continuous terrain prediction using data stream from sensors} (accelerometers and gyroscopes) \textbf{attached to a person's prosthetic lower limb}}
             \resumeResultItem{Achieved 93.5\% weighted-mean F1-Score on the private leader-board; \textbf{Stood $1^{st}$} (among  $\approx 120$ participants) in the competition}
           \resumeItemListEnd 
         
 
 
         \resumeProjectHeading
-          {\textbf{\href{https://github.com/aryashah278/IntelligentCharacterRecognition}{Intelligent Character Recognition}} $|$ \emph{Design Engineering}}{}{}{} 
+          {\textbf{\href{https://github.com/aryashah278/IntelligentCharacterRecognition}{Intelligent Character Recognition (ICR)}} $|$ \emph{Design Engineering}}{}{}{} 
           \vspace{-20pt}
           \resumeItemListStart
-            \resumeItem{Built a software solution to capture data from images of specially-designed hand-filled forms and store it into a database of user's choice}
+            \resumeItem{Built a \textbf{software solution to capture data from} images of specially-designed \textbf{hand-filled forms} and store it into a database of user's choice}
             
             \resumeResultItem{Using \href{https://www.cs.ubc.ca/~lowe/papers/ijcv04.pdf}{SIFT}, managed to detect all the text blocks from well-lit images; Achieved classification accuracy of $\approx80\%$ using a \href{https://papers.nips.cc/paper/2012/file/c399862d3b9d6b76c8436e924a68c45b-Paper.pdf}{CNN classifier}}
             \resumeItemListEnd
 
 
         \resumeProjectHeading
-        {\textbf{Website for College NCC Unit} $|$ \emph{Web Development}}{}{}{}        
+        {\textbf{LAMP-stack website} $|$ \emph{Web Development}}{}{}{}        
           \vspace{-20pt}
         \resumeItemListStart
-            \resumeItem{Proposed, developed and maintained a website for the National Cadet Corps unit hosted on college campus from 2018 to 2020}
+            \resumeItem{Proposed, developed and maintained \textbf{a website for the National Cadet Corps unit hosted on college campus} from 2018 to 2020}
             
             \resumeResultItem{Was awarded \textbf{NCC Certificate of Excellence} for this work; Currently, NIC-India hosts a \href{https://indiancc.nic.in/}{modified version}}
             \resumeItemListEnd
@@ -303,18 +305,18 @@
             
             %   \vspace{-10pt}
               \resumeProjectHeading
-              {\textbf{\href{https://github.com/ivbhatt/SinglePerson2DPoseEstimation}{Single Person 2D Pose Estimation}} $|$ \emph{Deep Learning - Computer Vision}}{}{}{}                    
+              {\textbf{\href{https://github.com/ivbhatt/SinglePerson2DPoseEstimation}{Human Pose Estimation (HPE)}} $|$ \emph{Deep Learning - Computer Vision}}{}{}{}                    
               \vspace{-20pt}
     
               \resumeItemListStart
-                \resumeItem{Built an HPE system taking inspiration from \href{https://arxiv.org/pdf/1602.00134.pdf}{CPMs} and \href{https://arxiv.org/pdf/1603.06937.pdf}{SHMs}; Achieved $\approx 82\%$ PCKh@0.5 which is 10\% less than \href{https://arxiv.org/pdf/1901.01760.pdf}{State-of-the-Art}}
+                \resumeItem{Built an HPE system taking inspiration from \href{https://arxiv.org/pdf/1602.00134.pdf}{CPMs} and \href{https://arxiv.org/pdf/1603.06937.pdf}{SHMs}; \textbf{Achieved $\approx 82\%$ PCKh@0.5 which is 10\% less than \href{https://arxiv.org/pdf/1901.01760.pdf}{State-of-the-Art}}}
                 \resumeItemListEnd
                 \vspace{-5pt}
             \resumeProjectHeading
               {\textbf{\href{https://drive.google.com/drive/folders/16YSzpXX8hZ2esmcwaVxNPADj3v1WIfHF?usp=sharing}{Maze Exploration and Navigation}} $|$ \emph{Reinforcement Learning; IoT}}{}{}{}
               \vspace{-20pt}
               \resumeItemListStart
-                \resumeItem{Trained an RL agent using Deep-Q-learning and Policy Gradient methods to navigate through an uncharted region on-the-fly}
+                \resumeItem{\textbf{Trained an RL agent} using Deep-Q-learning and Policy Gradient methods \textbf{to navigate through an uncharted region} on-the-fly}
                 \resumeItem{Built a Raspberry Pi powered pilot-vehicle with \href{https://en.wikipedia.org/wiki/Lidar}{LiDAR} (for location tracking \& obstacle detection) that could navigate in sparse mazes}
                 % \resumeItem{Experimented with Deep-Q-learning and Policy Gradient methods to train the Reinforcement Learning Agent}
                 % \resumeItem{Built a Raspberry Pi powered vehicle that could navigate in sparse obstacle courses using \href{https://en.wikipedia.org/wiki/Lidar}{LiDAR} (for location tracking & obstacle detection)}
@@ -331,22 +333,22 @@
         \resumeSubheading{Students' Core Committee (SCC), BVM Engineering College}{ \textit{Member \& Computer  Engineering Branch Co-head}}{}{}
     \vspace{-15pt}
         \resumeItemListStart
-            \resumeItem{SCC organizes BVM's annual techno-cultural festival \href{https://www.youtube.com/watch?v=qVKYQioCpzw}{UDAAN}; 3000+ participants from across the state are hosted on the BVM campus}
-            \resumeResultItem{Was directly responsible for conducting 4 events totaling  $\approx600$ participants; Received \textbf{Spirit of Udaan award} for exceptional contribution}
+            \resumeItem{SCC organizes BVM's annual techno-cultural festival \href{https://www.youtube.com/watch?v=qVKYQioCpzw}{UDAAN}; 5000+ participants from across the state are hosted on the BVM campus}
+            \resumeResultItem{\textbf{Was directly responsible for conducting 4 events with  $\approx1000$ participants}; Received \textbf{Spirit of Udaan award} for exceptional contribution}
         \resumeItemListEnd
     % \vspace{-10pt}
     \resumeSubheading{National Cadet Corps (NCC), 2 Composite Technical Company (NCC)}{\textit{Cadet \& (later) Under Officer}}{}{}
     \vspace{-15pt}
         \resumeItemListStart
-            \resumeResultItem{Was directly responsible for ensuring  proper training of about 60 cadets; Proposed, developed and maintained a website for the unit}
-            \resumeResultItem{Received \textbf{NCC Certificate of Excellence}; Recieved NCC Officers' Training Academy (Kamptee) \textbf{Certificate of Merit}, etc.}
+            \resumeResultItem{\textbf{Was directly responsible for} ensuring  proper training of \textbf{$\approx$ 60 cadets}; Proposed, developed and maintained a website for the unit}
+            \resumeResultItem{Received \textbf{NCC Certificate of Excellence}; Received NCC Officers' Training Academy (Kamptee) \textbf{Certificate of Merit}, etc.}
         \resumeItemListEnd
 
     \resumeSubheading{Writing}{}{}{}
     \vspace{-15pt}
         \resumeItemListStart
-            \resumeResultItem{Writer for Analytics Vidhya's Online Publication; 100+ hours of total read time on my \href{https://ivbhatt.medium.com/}{Medium} blogs related to Machine Learning}
-            \resumeResultItem{Active Writer on \href{https://www.quora.com/profile/Ishan-Bhatt-21}{Quora} since 2015; 67K+ lifetime views on my answers to questions related to various topics in Computer Science}
+            \resumeResultItem{Writer for Analytics Vidhya's Online Publication; \textbf{100+ hours of total read time} on my \href{https://ivbhatt.medium.com/}{Medium} blogs related to Machine Learning}
+            \resumeResultItem{Active Writer on \href{https://www.quora.com/profile/Ishan-Bhatt-21}{Quora} since 2015; \textbf{$\approx$75K lifetime views} on my answers to questions related to various topics in Computer Science}
             \resumeResultItem{Contributed to most major campus periodicals at BVM; 4 of my  \href{https://drive.google.com/drive/folders/1sOZIAW9ZOfXf0sClM-c1x2Be4pcSgcNG}{non-technical articles} were featured in various campus publications} 
             % \resumeResultItem{      \href{https://drive.google.com/drive/folders/1sOZIAW9ZOfXf0sClM-c1x2Be4pcSgcNG}{Research Papers}}
             
